# Vad

./: README.md  README_EN.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/tech/oom/vad/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/tech/oom/vad/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/tech/oom/vad/: ExampleUnitTest.java
vadlibrary/: CMakeLists.txt  build.gradle
vadlibrary/src/androidTest/java/tech/oom/vadlibrary/: ExampleInstrumentedTest.java
vadlibrary/src/main/: AndroidManifest.xml
vadlibrary/src/main/java/tech/oom/vadlibrary/: Vad.java
vadlibrary/src/main/jni/: native-lib.c
vadlibrary/src/main/jni/vad_src/: checks.cc  checks.h  cross_correlation.c  downsample_fast.c  min_max_operations.c  scoped_ptr.h  signal_processing_library.h  spl_init.c  spl_inl.h  spl_inl_armv7.h  vad.cc  vad.h  vad_core.c  vad_core.h  vad_filterbank.c  vad_filterbank.h  vad_gmm.c  vad_sp.c  vad_sp.h  vector_scaling_operations.c  webrtc_vad.c  webrtc_vad.h
vadlibrary/src/main/res/values/: strings.xml
vadlibrary/src/test/java/tech/oom/vadlibrary/: ExampleUnitTest.java
volume/: build.gradle
volume/src/androidTest/java/tech/oom/: ExampleInstrumentedTest.java
volume/src/main/: AndroidManifest.xml
volume/src/main/java/tech/oom/volume/: BytesTransUtil.java  RecordConfig.java  VolumeVad.java
volume/src/main/res/values/: strings.xml
volume/src/test/java/tech/oom/: ExampleUnitTest.java
